Cleans up notebook and moves normalization functions out

--- a/STARRseq-db.ipynb
+++ b/STARRseq-db.ipynb
@@ -34,13 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "106646cc-7b2a-4fcf-bc3c-1c93586ff9e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_ROOT = Path('../igvf-pm/K562/leave-one-out')\n",
-    "DB_BASE = Path('../data')\n",
+    "PROJECT_ROOT = Path('/hpc/group/igvf')\n",
+    "DB_ROOT = PROJECT_ROOT / 'db'\n",
+    "STARR_DS = 'K562'\n",
+    "DATA_ROOT = Path(f'../igvf-pm/{STARR_DS}/leave-one-out')\n",
+    "STARR_DB = DB_ROOT / f\"{STARR_DS}db\"\n",
     "\n",
     "# datafile = \"K562.combined.sample.tsv.gz\"\n",
     "datafile = \"combined.input_and_output.gt_100.log2FC.sequence.txt.gz\"\n",
@@ -235,56 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d73e7b0d-a957-405a-b397-5762029fd23a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_db(df, db_path=DB_BASE / \"K562db\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93d13cd5-2c62-433d-b7ac-2c6f9bd4fc9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize_by_lib(df, counts_per=1e6, dna_prefix=\"input\", rna_prefix=\"output\", rep_suffix=\"_rep\"):\n",
-    "    col_regex = \"^(\" + dna_prefix + \"|\" + rna_prefix + \")\" + rep_suffix\n",
-    "    libsizes = df.filter(regex=col_regex).sum(axis=0)\n",
-    "    dfnorm = df.filter(regex=col_regex) / libsizes * counts_per\n",
-    "    return dfnorm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "026f2555-41f0-4dad-aa13-0812ab953323",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfnorm = normalize_by_lib(df).rename(columns=lambda x: x + \"_norm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0817cd02-c47f-46c8-b4ba-fab7c1cb1996",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mean_fc(df, pseudocount=0, dna_prefix=\"input\", rna_prefix=\"output\", rep_suffix=\"_rep\"):\n",
-    "    dna_cols = \"^\" + dna_prefix + rep_suffix\n",
-    "    rna_cols = \"^\" + rna_prefix + rep_suffix\n",
-    "    return ((df.filter(regex=rna_cols).mean(axis=1) + pseudocount) /\n",
-    "            (df.filter(regex=dna_cols).mean(axis=1) + pseudocount))"
+    "write_db(df, db_path=STARR_DB)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
