Corrects a few typos

--- a/Motifs-db.ipynb
+++ b/Motifs-db.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "### Determining significance in light of multiple testing\n",
     "\n",
-    "The significance p-value of reported matches needs to be corrected for multiple testing, especially given the very large number of tests. The genome-wise scan was run over genomic regions in separate jobs for parallization. This means that the q-values for FDR-based multiple testing correction as originally reported, while valid within the region for which they were computed, are not valid for the whole genome scane.\n",
+    "The significance p-value of reported matches needs to be corrected for multiple testing, especially given the very large number of tests. The genome-wide scan was run over genomic regions in separate jobs for parallization. This means that the q-values for FDR-based multiple testing correction as originally reported, while valid within the region for which they were computed, are not valid for the whole genome scan.\n",
     "\n",
     "One possibility is to use a Bonferroni correction. However, even for only the reported matches, this would result in a very conservative cutoff of 1e-10 (for FWER of 0.5), and the original scans already applied a p-value cutoff (of 0.0001), hence far less than all tests were reported. So the \"real\" Bonferroni correction should arguably be even more conservative.\n",
     "\n",
