Adds compression to writing CSV file

--- a/preds/BIRD-vs-BlueSTARR-preds.ipynb
+++ b/preds/BIRD-vs-BlueSTARR-preds.ipynb
@@ -460,11 +460,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb_df.to_csv(DB_ROOT / 'blue_bird.csv', index=False)"
+    "bb_df.to_csv(DB_ROOT / 'blue_bird.csv.gz', index=False)"
    ]
   },
   {
