Fixes leftover text

--- a/preds/Kircher-vs-BlueSTARR-preds.ipynb
+++ b/preds/Kircher-vs-BlueSTARR-preds.ipynb
@@ -459,13 +459,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### BIRD estimates vs naïve theta vs BlueSTARR predictions"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -479,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we'll look at BIRD estimates vs naïve theta values including the transition of $0.3 < P_{reg} < 0.9$."
+    "First we'll look at BlueSTARR predictions vs MPRA effect sizes over the entire range of p-values."
    ]
   },
   {
@@ -520,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then the same removing this transition region."
+    "Then the same removing rows with $0.01\\leq p\\leq 0.5$."
    ]
   },
   {
