Fixes plot labels and reran whole notebook

--- a/sim/Activation-shapes.ipynb
+++ b/sim/Activation-shapes.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "7ad99d3e",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
     "plt.plot(dists, y_periodic)\n",
     "plt.title(\"Decaying Sine Wave with Decaying Offset\")\n",
     "plt.xlabel(\"Distance (basepairs)\")\n",
-    "plt.ylabel(\"Activation\")\n",
+    "plt.ylabel(\"Activation value\")\n",
     "plt.grid(True)"
    ]
   },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "43c4eec7",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
     "                         x_offset=min_dist)\n",
     "\n",
     "# Plot the signal\n",
-    "plt.plot(dists, y_bowl, label='Bowl Activation')\n",
+    "plt.plot(dists, y_bowl)\n",
     "plt.title(\"Bowl-Shaped Signal\")\n",
     "plt.xlabel(\"Distance (basepairs)\")\n",
     "plt.ylabel(\"Activation Value\")\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "2463657f",
    "metadata": {},
    "outputs": [
@@ -321,8 +321,8 @@
     "# Plot the signal\n",
     "plt.plot(dists, y_mound)\n",
     "plt.title(\"Mound-Shaped Signal\")\n",
-    "plt.xlabel(\"Time (s)\")\n",
-    "plt.ylabel(\"Amplitude\")\n",
+    "plt.xlabel(\"Distance (basepairs)\")\n",
+    "plt.ylabel(\"Activation Value\")\n",
     "plt.grid(True)"
    ]
   }
