Fixes a few typos and clarifications

--- a/Motifs-db.ipynb
+++ b/Motifs-db.ipynb
@@ -200,7 +200,7 @@
     "\n",
     "The significance p-value of reported matches needs to be corrected for multiple testing, especially given the very large number of tests. The genome-wide scan was run over genomic regions in separate jobs for parallization. This means that the q-values for FDR-based multiple testing correction as originally reported, while valid within the region for which they were computed, are not valid for the whole genome scan.\n",
     "\n",
-    "One possibility is to use a Bonferroni correction. However, even for only the reported matches, this would result in a very conservative cutoff of 1e-10 (for FWER of 0.5), and the original scans already applied a p-value cutoff (of 0.0001), hence far less than all tests were reported. So the \"real\" Bonferroni correction should arguably be even more conservative.\n",
+    "One possibility is to use a Bonferroni correction. However, even for only the reported matches, this would result in a very conservative cutoff of 1e-10 (for FWER of 0.05), and the original scans already applied a p-value cutoff (of 0.0001), hence far less than all tests were reported. So the \"real\" Bonferroni correction should arguably be even more conservative.\n",
     "\n",
     "Instead we try to leverage the q-values that were alredy computed. Specifically, we find a p-value cutoff that approximately corresponds to a desired q-value cutoff."
    ]
@@ -258,9 +258,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is presumably because some regions had many (in fact, orders of magnitude) more weak or insignificant matches than others. (The number of tests could also differ markedly between regions, but seems less likely to cover orders of magnitude if region lengths were roughly the same.)\n",
+    "This is presumably because some regions had many (in fact, orders of magnitude) more weak or insignificant matches than others. (The number of tests could also differ markedly between regions, but it seems less likely to cover orders of magnitude if region lengths were roughly the same.)\n",
     "\n",
-    "We will use the principle here that q-values must monotically decrease for p-values in descending order. I.e., if q-values were to be recomputed for the entire dataset, the p-value for any given q-value could not be higher than the lowest p-value found across all regions for a given q-value.\n",
+    "We will use the principle here that q-values must monotically decrease (or remain the same) for p-values in descending order. I.e., if q-values were to be recomputed for the entire dataset, the p-value for any given q-value could not be higher than the lowest p-value found across all regions for a given q-value.\n",
     "\n",
     "We find this p-value, and truncate it to the nearest power of 10:"
    ]
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we can subset using this p-value. Note that the actual q-value for the chosen p-value, if recomputed over the entire scan, might be somewhat different from the cutoff we chose. I.e., we are assuming that the fraction and distribution of insignificant matches (and thus p-values) for the whole scan is similar to the one of the \"worst\" region. "
+    "Then we can subset using this p-value. Note that the actual q-value for the chosen p-value, if recomputed over the entire scan, might be somewhat different from the cutoff we chose. I.e., we are assuming that the fraction and distribution of insignificant matches (and thus p-values) for the whole scan is similar to the one of the \"worst\" region (the one with the lowest p-value for a given q-value). This could well be overly conservative, and importantly, seems unlikely to be too permissive."
    ]
   },
   {
