Fixes minor and inconsequential typo

--- a/preds/Model-benchmarking.ipynb
+++ b/preds/Model-benchmarking.ipynb
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
     "ax.set_ylabel('AUROC')\n",
     "ax.set_xlabel('Model')\n",
     "ax.set_ylim(0, 1)\n",
-    "ax.set_yticks(np.arange(0, 1.01, 0.1, ))\n",
+    "ax.set_yticks(np.arange(0, 1.01, 0.1))\n",
     "ax.yaxis.grid(True)\n",
     "ax.set_axisbelow(True)\n",
     "ax.legend(title='Subset', bbox_to_anchor=(1.02, 1), loc='upper left')\n",
@@ -549,7 +549,7 @@
     "    ax.set_ylabel('AUROC')\n",
     "    ax.set_xlabel('Region')\n",
     "    ax.set_ylim(0, 1)\n",
-    "    ax.set_yticks(np.arange(0, 1.01, 0.1, ))\n",
+    "    ax.set_yticks(np.arange(0, 1.01, 0.1))\n",
     "    ax.tick_params(axis='x', labelrotation=90)\n",
     "    ax.yaxis.grid(True)\n",
     "    ax.set_axisbelow(True)\n",
